--- a/style.css
+++ b/style.css
@@ -91,3 +91,49 @@ a:hover{
     color: #fff;
     background-color: transparent;
 }
+
+.footer a{
+    color: #00b5fa;
+}
+
+.footer a:hover{
+    color: #3286b7;
+}
+
+.footer{
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    background: #105272;
+    padding: 30px 0;
+    position: relative;
+    margin-top: 70px;
+}
+
+.footer-corner-right{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.footer-corner-left{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.footer .custom-logo{
+    height: 50px;
+    width: auto;
+    padding-right: 5px;
+    vertical-align: top;
+}
+
+.footer-blog-name{
+    font-size: 38px;
+}
+
+.footer-copyright{
+    font-size: 14px;
+    text-transform: uppercase;
+}
